--- a/Salon/client/public/index.html
+++ b/Salon/client/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="css/appointment-picker.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -28,7 +29,17 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+
+<!-- added appoinment-picker stuff 35-40 -->
+      <article style="padding-bottom: 200px">
+        <div id="app"></div>
+        <p>
+          <a href="https://github.com/jannicz/appointment-picker/tree/master/example/react/react-component.js">React Component source</a>
+        </p>
+      </article>
+
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -39,5 +50,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+<!-- added scipt for appointment picker 54-58 -->
+    <script src="js/appointment-picker.min.js"></script>
+
+    <script type="text/javascript">
+        new AppointmentPicker(...);
+    </script>
+
   </body>
+
 </html>
