Got server side to populate

--- a/Salon/client/public/index.html
+++ b/Salon/client/public/index.html
@@ -32,12 +32,12 @@
     <div id="root">
 
 <!-- added appoinment-picker stuff 35-40 -->
-      <article style="padding-bottom: 200px">
+      <!-- <article style="padding-bottom: 200px">
         <div id="app"></div>
         <p>
           <a href="https://github.com/jannicz/appointment-picker/tree/master/example/react/react-component.js">React Component source</a>
         </p>
-      </article>
+      </article> -->
 
     </div>
     <!--
