--- a/Salon/client/public/index.html
+++ b/Salon/client/public/index.html
@@ -10,6 +10,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,6 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>React App</title>
   </head>
   <body>
@@ -50,14 +52,19 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <style>@import url('https://fonts.googleapis.com/css2?family=Bigelow+Rules&family=Henny+Penny&family=Mystery+Quest&display=swap');
+    </style> 
 
 <!-- added scipt for appointment picker 54-58 -->
-    <script src="js/appointment-picker.min.js"></script>
+    <!-- <script src="js/appointment-picker.min.js"></script>
 
     <script type="text/javascript">
         new AppointmentPicker(...);
-    </script>
+    </script> -->
+
+        
 
   </body>
+
 
 </html>
